suit de brief calculatrice

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,10 +16,10 @@
         <i class="bi bi-caret-right-fill btn position-absolute top-0" id="menusidebar" onclick="menusidebar()"></i>
         <ul class="nav nav-pills d-flex flex-sm-column vh-100" id="type_calc">
             <li class="btn border-0 my-4"><i class="bi bi-calculator"></i></li>
-            <li class="btn btn-outline-primary border-0 my-2"><i class="bi bi-123"></i></li>
-            <li class="btn btn-outline-primary border-0 my-2"><i class="bi bi-thermometer"></i></li>
-            <li class="btn btn-outline-primary border-0 my-2"><i class="bi bi-clock"></i></li>
-            <li class="btn btn-outline-primary border-0 my-2"><i class="bi bi-currency-bitcoin"></i></li>
+            <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-123"></i></li>
+            <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-thermometer"></i></li>
+            <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-clock"></i></li>
+            <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-currency-bitcoin"></i></li>
             <li id="dark_light" onclick="dark()">
                 <div id="dark"></div>
             </li>
@@ -30,7 +30,7 @@
         <div class="position-absolute top-0 left-0 col-4" id="historique">
             <header>
                 <h3>Historique</h3>
-                <h3><i class="bi bi-trash3 btn" id="sup_historique" onclick="sup_historique()"></i></h3>
+                <i class="bi bi-trash3 btn" id="sup_historique" onclick="sup_historique()"></i>
             </header>
             <article class="d-flex ms-5" id="historique_op">
                 <div id="hoperation"></div>
@@ -43,31 +43,31 @@
                 <input class="col-11" id="result" type="text" style="height: 60px;" placeholder="0" disabled>
             </div>
             <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" value="Del">
+                <input class="col-2" type="button" value="Del" onclick="del()">
                 <input class="col-2" type="button" value="Cl" onclick="btmCl()">
-                <input class="col-2" type="button" value="%" onclick="operation('%')">
-                <input class="col-2" type="button" value="&#247" onclick="operation('/')">
+                <input class="col-2" type="button" value="%" id="pourcentage_operation" onclick="operation('%')">
+                <input class="col-2" type="button" value="&#247" id="division_operation" onclick="operation('/')">
             </div>
            <div class="d-flex justify-content-around">
                 <input class="col-2" type="button" id="7" value="7" onclick="btm(7)">
                 <input class="col-2" type="button" id="8" value="8" onclick="btm(8)">
                 <input class="col-2" type="button" value="9" onclick="btm(9)">
-                <input class="col-2" type="button" value="x" onclick="operation('*')">
+                <input class="col-2" type="button" value="x" id="multiplication_operation" onclick="operation('*')">
            </div>
            <div class="d-flex justify-content-around">
                 <input class="col-2" type="button" value="4" onclick="btm(4)">
                 <input class="col-2" type="button" value="5" onclick="btm(5)">
                 <input class="col-2" type="button" value="6" onclick="btm(6)">
-                <input class="col-2" type="button" value="+" onclick="operation('+')">
+                <input class="col-2" type="button" value="+" id="addition_operation" onclick="operation('+')">
            </div>
            <div class="d-flex justify-content-around">
                 <input class="col-2" type="button" value="1" onclick="btm(1)">
                 <input class="col-2" type="button" value="2" onclick="btm(2)">
                 <input class="col-2" type="button" value="3" onclick="btm(3)">
-                <input class="col-2" type="button" value="-" onclick="operation('-')">
+                <input class="col-2" type="button" id="soustraction_operation" value="-" onclick="operation('-')">
            </div>
            <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" value="," onclick="btmFloat()">
+                <input class="col-2" type="button" id="btm_float" value="," onclick="btmFloat()">
                 <input class="col-2" type="button" value="0" onclick="btm(0)">
                 <input class="col-5" type="button" value="=" onclick="btmEgal()">
            </div>
