suite de brief calculatrice

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -69,7 +69,7 @@
            <div class="d-flex justify-content-around">
                 <input class="col-2" type="button" id="btm_float" value="," onclick="btmFloat()">
                 <input class="col-2" type="button" value="0" onclick="btm(0)">
-                <input class="col-5" type="button" value="=" onclick="btmEgal()">
+                <input class="col-5" type="button" value="=" id="egal_operation" onclick="btmEgal()">
            </div>
         </form>
     </div>
