modifier la fonction btmEgal de calculatrice

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -32,9 +32,8 @@
                 <h3>Historique</h3>
                 <i class="bi bi-trash3 btn" id="sup_historique" onclick="sup_historique()"></i>
             </header>
-            <article class="d-flex ms-5" id="historique_op">
-                <div id="hoperation"></div>
-                <div id="hresult"></div>
+            <article class="ms-5 text-center" id="historique_op">
+                <h3 id="hoperation"></h3>
             </article>
         </div>
         <!------------------------ calculator ------------------------>
