modification sur responsive

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Calculatrice</title>
 </head>
-<body class="d-flax" id="color_theme">
+<body id="color_theme">
     <!------------------------ sidebar ------------------------>
     <div class="col-md-1 col-2 vh-100 position-relative" id="sidebar">
         <i class="bi bi-caret-right-fill btn position-absolute top-0" id="menusidebar" onclick="menusidebar()"></i>
-        <ul class="nav nav-pills d-flex flex-sm-column vh-100" id="type_calc">
+        <ul class="nav nav-pills d-flex flex-column vh-100" id="type_calc">
             <li class="btn border-0 my-4"><i class="bi bi-calculator"></i></li>
             <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-123"></i></li>
             <li class="btn border-0 my-2 color_hover_type_calc"><i class="bi bi-thermometer"></i></li>
@@ -25,52 +25,54 @@
             </li>
         </ul>
     </div>
-    <div>
-        <!------------------------ historique ------------------------>
-        <div class="position-absolute top-0 left-0 col-4" id="historique">
+    <div class="col-11 d-md-flex" id="calculator_simple">
+        <!------------------------ calculator ------------------------>
+        <div class="col-md-5 col-9">
+            <form class="py-2 h2" id="calculator">
+                <div class="d-flex justify-content-around">
+                    <input class="col-11" id="result" type="text" style="height: 60px;" placeholder="0" disabled>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <input class="col-2" type="button" value="Del" onclick="del()">
+                    <input class="col-2" type="button" value="Cl" onclick="btmCl()">
+                    <input class="col-2" type="button" value="%" id="pourcentage_operation" onclick="operation('%')">
+                    <input class="col-2" type="button" value="&#247" id="division_operation" onclick="operation('/')">
+                </div>
+            <div class="d-flex justify-content-around">
+                    <input class="col-2" type="button" id="7" value="7" onclick="btm(7)">
+                    <input class="col-2" type="button" id="8" value="8" onclick="btm(8)">
+                    <input class="col-2" type="button" value="9" onclick="btm(9)">
+                    <input class="col-2" type="button" value="x" id="multiplication_operation" onclick="operation('*')">
+            </div>
+            <div class="d-flex justify-content-around">
+                    <input class="col-2" type="button" value="4" onclick="btm(4)">
+                    <input class="col-2" type="button" value="5" onclick="btm(5)">
+                    <input class="col-2" type="button" value="6" onclick="btm(6)">
+                    <input class="col-2" type="button" value="+" id="addition_operation" onclick="operation('+')">
+            </div>
+            <div class="d-flex justify-content-around">
+                    <input class="col-2" type="button" value="1" onclick="btm(1)">
+                    <input class="col-2" type="button" value="2" onclick="btm(2)">
+                    <input class="col-2" type="button" value="3" onclick="btm(3)">
+                    <input class="col-2" type="button" id="soustraction_operation" value="-" onclick="operation('-')">
+            </div>
+            <div class="d-flex justify-content-around">
+                    <input class="col-2" type="button" id="btm_float" value="," onclick="btmFloat()">
+                    <input class="col-2" type="button" id="btm_0" value="0" onclick="btm(0)">
+                    <input class="col-5" type="button" value="=" id="egal_operation" onclick="btmEgal()">
+            </div>
+            </form>
+        </div>
+        <!------------------------ historique calculator ------------------------>
+        <div class="col-md-4 col-8 overflow-auto" id="historique">
             <header>
                 <h3>Historique</h3>
                 <i class="bi bi-trash3 btn" id="sup_historique" onclick="sup_historique()"></i>
             </header>
-            <article class="ms-5 text-center" id="historique_op">
+            <article class="text-center" id="historique_op">
                 <h3 id="hoperation"></h3>
             </article>
         </div>
-        <!------------------------ calculator ------------------------>
-        <form class="col-md-5 col-9 py-2 h2 position-absolute bottom-0 end-0" id="calculator">
-            <div class="d-flex justify-content-around">
-                <input class="col-11" id="result" type="text" style="height: 60px;" placeholder="0" disabled>
-            </div>
-            <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" value="Del" onclick="del()">
-                <input class="col-2" type="button" value="Cl" onclick="btmCl()">
-                <input class="col-2" type="button" value="%" id="pourcentage_operation" onclick="operation('%')">
-                <input class="col-2" type="button" value="&#247" id="division_operation" onclick="operation('/')">
-            </div>
-           <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" id="7" value="7" onclick="btm(7)">
-                <input class="col-2" type="button" id="8" value="8" onclick="btm(8)">
-                <input class="col-2" type="button" value="9" onclick="btm(9)">
-                <input class="col-2" type="button" value="x" id="multiplication_operation" onclick="operation('*')">
-           </div>
-           <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" value="4" onclick="btm(4)">
-                <input class="col-2" type="button" value="5" onclick="btm(5)">
-                <input class="col-2" type="button" value="6" onclick="btm(6)">
-                <input class="col-2" type="button" value="+" id="addition_operation" onclick="operation('+')">
-           </div>
-           <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" value="1" onclick="btm(1)">
-                <input class="col-2" type="button" value="2" onclick="btm(2)">
-                <input class="col-2" type="button" value="3" onclick="btm(3)">
-                <input class="col-2" type="button" id="soustraction_operation" value="-" onclick="operation('-')">
-           </div>
-           <div class="d-flex justify-content-around">
-                <input class="col-2" type="button" id="btm_float" value="," onclick="btmFloat()">
-                <input class="col-2" type="button" value="0" onclick="btm(0)">
-                <input class="col-5" type="button" value="=" id="egal_operation" onclick="btmEgal()">
-           </div>
-        </form>
     </div>
 </body>
 </html>
